updating the documentation
